--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -59,6 +59,11 @@
                                 <i class="fas fa-book-open me-1"></i> Tech Deep Dive
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('docs.download_docs') }}">
+                                <i class="fas fa-file-pdf me-1"></i> Download Docs
+                            </a>
+                        </li>
                         {% if current_user.has_role('admin') %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('auth.register') }}" onclick="console.log('Register link clicked')">
